--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea05/estilos.css
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea05/estilos.css
@@ -14,16 +14,14 @@
 }
 
 .contenedor {
-    margin-top: 0;
-    width: 1000px;
-    height: 700px;
+    width: 1300px;
+    height: 660px;
     display: flex;
-    flex-direction: row;
 }
 
 .tablero {
-    width: 684px;
-    height: 684px;
+    width: 660px;
+    height: 660px;
     display: inline-block;
     vertical-align: middle;
 }
@@ -41,6 +39,10 @@
     margin: 2px;
 }
 
+.casillaHover {
+    background-color: lightblue;
+}
+
 .casillaPulsada {
     background-color: aquamarine;
     box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.2);
@@ -49,4 +51,46 @@
     /* Ajustar el margen para que parezca hundido */
     margin-bottom: 0px;
     /* Ajustar el margen para que parezca hundido */
+}
+
+.textoInformativo {
+    width: 400px;
+    height: 200px;
+}
+
+.zonaInformativa {
+    width: 600px;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    padding: 10px;
+    background-color: lightgray;
+    border: 1px solid black;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
+
+.botonesControl {
+    width: 660px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.divImagenes {
+    width: 660px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.divImagenes img {
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
