--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/styles/estilos.css
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/styles/estilos.css
@@ -100,6 +100,15 @@ button {
     font-size: 1.5em;
 }
 
+/* Colocamos la previsión del tiempo y el mapa en una sola fila */
+#divPrevisionMapa {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 #tarjetaTiempo {
     display: flex;
     flex-direction: column;
@@ -109,7 +118,7 @@ button {
     padding: 10px;
     border: 1px solid var(--color-titulos);
     border-radius: 10px;
-    width: 50%;
+    width: 500px;
     margin: 20px auto;
     background-color: var(--color-fondo-tarjeta);
     font-weight: bold;
@@ -148,9 +157,26 @@ img {
 }
 
 /* Estilos de la zona de localización */
-#map {
-    width: 400px;
-    height: 400px;
-    margin: 0 auto;
+#localizacion {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: var(--color-fondo-tarjeta);
+    font-weight: bold;
+    border: 1px solid var(--color-titulos);
+    margin: 20px auto;
+}
 
+#map {
+    width: 450px;
+    height: 450px;
+}
+
+.error {
+    color: red;
+    font-weight: bold;
 }
