subiendo tarea finalizada

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/styles/estilos.css
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/styles/estilos.css
@@ -110,6 +110,10 @@ button {
     align-items: center;
 }
 
+#divPrevisionMapa div {
+    margin: 20px;
+}
+
 #tarjetaTiempo {
     display: flex;
     flex-direction: column;
